force-app/main/default/objects/SlashCommand__c/SlashCommand__c.object-meta.xml
<CustomObject>
    <description>Slack commands sent to the API</description>
    <label>Slash Command</label>
    <nameField>
        <displayFormat>SC-{0000000000}</displayFormat>
        <label>Slash Command Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slash Commands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>