force-app/main/default/objects/SlashCommand__c/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <description>Exact slash command, issued by the user. For example, &quot;/clock&quot;, &quot;/join&quot;.</description>
    <label>Command</label>
    <length>40</length>
    <type>Text</type>
</CustomField>