force-app/main/default/objects/SlashCommand__c/fields/ErrorStackTraceString__c.field-meta.xml
<CustomField>
    <fullName>ErrorStackTraceString__c</fullName>
    <description>Exception.getStackTraceString()</description>
    <label>Error Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>