force-app/main/default/objects/SlashCommand__c/fields/ErrorTypeName__c.field-meta.xml
<CustomField>
    <fullName>ErrorTypeName__c</fullName>
    <description>Exception.getTypeName()</description>
    <label>Error Type Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>