force-app/main/default/objects/SlashCommand__c/fields/SlackUserId__c.field-meta.xml
<CustomField>
    <fullName>SlackUserId__c</fullName>
    <label>Slack User ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>