force-app/main/default/objects/SlashCommand__c/fields/Subcommand__c.field-meta.xml
<CustomField>
    <fullName>Subcommand__c</fullName>
    <description>Subcommand following the main command, issued by the user</description>
    <label>Subcommand</label>
    <length>40</length>
    <type>Text</type>
</CustomField>