force-app/main/default/objects/SlashCommand__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Text following the command, if given by the user</description>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>